--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="timed_btn">Timed</string>
     <string name="high_score">High Score</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_timed">TimedActivity</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
