--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_timed">TimedActivity</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_high_score">HighScoreActivity</string>
 </resources>
