--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Dots</string>
 
     <string name="play_btn">Play</string>
+    <string name="score_text">Score:</string>
     <string name="high_score">High Score</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_play">PlayActivity</string>
